--- a/style.css 2.css
+++ b/style.css 2.css
@@ -1,6 +1,6 @@
 body {
     font-family: Arial, sans-serif;
-    background-color: #f4f4f4;
+    background-color: #ffdbfa;
     margin: 0;
     padding: 0;
     display: flex;
@@ -24,12 +24,12 @@ body {
     flex-direction: column;
     align-items: center;
     padding: 30px 0;
-    border-bottom: 1px solid #eee;
+    border-bottom: 1px solid #242424;
     margin-bottom: 20px;
 }
 
 .top-section h1 {
-    color: #333;
+    color: #753f5e;
     font-size: 2.5em;
     margin-bottom: 5px;
 }
@@ -37,7 +37,7 @@ body {
 .top-section .title {
     text-align: center;
     font-style: italic;
-    color: #666;
+    color: #332446;
     font-size: 1.2em;
     margin-bottom: 15px;
 }
